build_error.txt
   Compiling workshop-downloader v0.1.0 (D:\Project Freelance\WorkshopDownloader\app\src-tauri)
error[E0716]: temporary value dropped while borrowed
  --> src\commands\system.rs:81:53
   |
81 |     let items = json["items"].as_array().unwrap_or(&vec![]);
   |                                                     ^^^^^^ - temporary value is freed at the end of this statement
   |                                                     |
   |                                                     creates a temporary value which is freed while still in use
82 |     
83 |     let results: Vec<SteamGameResult> = items
   |                                         ----- borrow later used here
   |
   = note: consider using a `let` binding to create a longer lived value
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `std::os::windows::process::CommandExt`
  --> src\services\downloader.rs:77:13
   |
77 |         use std::os::windows::process::CommandExt;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0716`.
warning: `workshop-downloader` (lib) generated 1 warning
error: could not compile `workshop-downloader` (lib) due to 1 previous error; 1 warning emitted
